[workspace]
resolver = "2"
members = ["client", "relay", "protocol", "shared", "tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Darshan"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
dashmap = "6"
futures-util = "0.3"
bytes = "1"
http = "1"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
clap = { version = "4", features = ["derive", "env"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tokio-stream = "0.1"
protocol = { path = "protocol" }
shared = { path = "shared" }
