[workspace]
resolver = "2"
members = ["client", "relay", "protocol", "shared", "tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Darshan"]
repository = "https://github.com/Its-darshu/tunnelX"
homepage = "https://github.com/Its-darshu/tunnelX"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
dashmap = "6"
futures-util = "0.3"
bytes = "1"
http = "1"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tokio-stream = "0.1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
toml = "0.8"
dirs = "5.0"
serde_json = "1.0"
protocol = { path = "protocol", version = "0.1.0", package = "tunnelx-protocol" }
shared = { path = "shared", version = "0.1.0", package = "tunnelx-shared" }
