[package]
name = "tunnelx"
description = "Expose your localhost to the internet as a secure HTTPS URL with a single command."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tunnel", "localhost", "https", "ngrok", "webhook"]
categories = ["command-line-utilities", "web-programming", "network-programming"]

[[bin]]
name = "tunnelx"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
shared.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
rand.workspace = true
futures-util.workspace = true
bytes.workspace = true
http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tokio-tungstenite.workspace = true
rustls.workspace = true
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
clap_complete.workspace = true
bincode.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
dirs.workspace = true
serde_json.workspace = true

# Terminal UI
crossterm = "0.28"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
console = "0.15"
qrcode = "0.14"
arboard = "3"
chrono = "0.4"
