[package]
name = "tunnelx-protocol"
description = "Wire protocol and frame types for tunnelx, the localhost tunneling tool."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
