[package]
name = "relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
shared.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true
rand.workspace = true
dashmap.workspace = true
futures-util.workspace = true
bytes.workspace = true
http.workspace = true
axum.workspace = true
axum-server.workspace = true
tokio-tungstenite.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio-stream.workspace = true
bincode.workspace = true
