[package]
name = "tunnelx-shared"
description = "Shared types and utilities for tunnelx, the localhost tunneling tool."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
