[package]
name = "tests"
version.workspace = true
edition.workspace = true
publish = false

[[test]]
name = "integration_test"
path = "integration_test.rs"

[dev-dependencies]
protocol.workspace = true
shared.workspace = true
tokio.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
axum.workspace = true
